--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@contentful/rich-text-html-renderer": "^15.13.1",
     "@types/gsap": "^3.0.0",
     "contentful": "^9.1.32",
     "gsap": "^3.10.4",
