--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@contentful/rich-text-html-renderer": "^15.13.1",
+    "@tailwindcss/typography": "^0.5.4",
     "@types/gsap": "^3.0.0",
     "contentful": "^9.1.32",
     "gsap": "^3.10.4",
