--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/gsap": "^3.0.0",
     "contentful": "^9.1.32",
     "gsap": "^3.10.4",
+    "marked": "^4.0.18",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -32,6 +33,7 @@
     "@angular/cli": "~13.3.5",
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
+    "@types/marked": "^4.0.3",
     "@types/node": "^12.11.1",
     "autoprefixer": "^10.4.7",
     "jasmine-core": "~4.0.0",
